source/component-vault/fromFORK/installation/canvas-vault-hc/canvas-vault-hc-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canvas-vault-hc-vs
  namespace: canvas-vault
  labels:
    app: canvas-vault-hc
spec:
  gateways:
  - istio-ingress/k8s-gateway
  hosts:
  - 'canvas-vault-hc.k8s.cluster2.de'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: canvas-vault-hc.canvas-vault.svc.cluster.local
        port:
          number: 8200
